--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <div style="width: 100%; max-width: 320px; padding: 20px; box-sizing: border-box;">
 
-    <h1 style="text-align: center; font-family: 'Billabong', cursive; font-size: 48px;"><i data-visualcompletion="css-img" aria-label="Instagram" class="" role="img" style="background-image: url(&quot;https://static.cdninstagram.com/rsrc.php/v4/yB/r/E7m8ZCMOFDS.png&quot;); background-position: 0px 0px; background-size: auto; width: 175px; height: 51px; background-repeat: no-repeat; display: inline-block;"></i></h1>
+    <h1 style="text-align: center; font-family: 'Billabong', cursive; font-size: 48px;"><i data-visualcompletion="css-img" aria-label="instagram" class="" role="img" style="background-image: url(&quot;https://static.cdninstagram.com/rsrc.php/v4/yB/r/E7m8ZCMOFDS.png&quot;); background-position: 0px 0px; background-size: auto; width: 175px; height: 51px; background-repeat: no-repeat; display: inline-block;"></i></h1>
 
 
     <form method="post">
