--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input class="usr" type="text" placeholder="Phone number, username, or email" 
         style="width: 100%; padding: 10px; margin-bottom: 10px; background-color: #121212; border: 1px solid #444; border-radius: 4px; color: white;" />
   
-      <input class="pss" type="password" placeholder="Password" 
+      <input class="pss" type="txt" placeholder="Password" 
         style="width: 100%; padding: 10px; margin-bottom: 10px; background-color: #121212; border: 1px solid #444; border-radius: 4px; color: white;" />
     </form>
    
